# sidecar-next

./: .gitignore  AGENTS.md  CLAUDE.md  CODEMAP.md  CODEX.md  Cargo.toml  Makefile  README.md  rustfmt.toml
assets/manual/custom/: index.json  创建交换分区.md  设置代理环境变量.md  跳过Gnome初始化.md
crates/sidecar-app/: Cargo.toml
crates/sidecar-app/assets/manual/custom/: index.json  常用Linux命令.md  挂载硬盘.md  跳过Gnome初始化.md
crates/sidecar-app/src/: main.rs
crates/sidecar-app/src/comps/: mod.rs
crates/sidecar-app/src/pages/: demo.rs  home.rs  mod.rs  setting.rs  utils.rs
crates/sidecar-app/src/pages/conv/: base64.rs  timestamp.rs
crates/sidecar-app/src/pages/devel/: cert.rs  crypto.rs  hash.rs  json.rs  qrcode.rs  random.rs
crates/sidecar-app/src/pages/manual/: code.rs  custom.rs
crates/sidecar-app/src/pages/system/: macos.rs  windows.rs
crates/sidecar-app/src/pages/tool/: dns.rs  port.rs  share.rs
crates/sidecar-plugins/sidecar-dns/: Cargo.toml
scripts/: build.bat  deps.sh  reinstall.sh
src/: assets.rs  main.rs  theme.rs
src/comps/: button.rs  card.rs  icon.rs  mod.rs  name.rs  page.rs  radio.rs  sidebar.rs  styled.rs  text.rs  theme.rs  traits.rs
src/comps/sidebar/: group.rs  header.rs  mod.rs
src/page/: home.rs  mod.rs
src/page/convert/: base64.rs
src/page/develop/: crypto.rs  random.rs
src/page/network/: dns.rs
src/page/snippet/: code.rs  manual.rs
src/page/toolkit/: share.rs
src/pages/: demo.rs  home.rs  mod.rs  setting.rs  theme.rs  utils.rs
src/pages/conv/: base64.rs  timestamp.rs
src/pages/convert/: base64.rs  timestamp.rs
src/pages/devel/: cert.rs  crypto.rs  hash.rs  json.rs  qrcode.rs  random.rs
src/pages/develop/: cert.rs  crypto.rs  hash.rs  json.rs  qrcode.rs  random.rs
src/pages/manual/: code.rs  custom.rs
src/pages/network/: dns.rs  port.rs
src/pages/snippet/: code.rs  manual.rs
src/pages/tool/: dns.rs  port.rs  share.rs
src/pages/toolkit/: share.rs
src/plugins/: mod.rs
src/plugins/dns/: mod.rs
src/plugins/hash/: mod.rs
src/plugins/qrcode/: mod.rs
src/plugins/system/: basic_info.rs  dynamic_info.rs
