[package]
name = "sidecar-next"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
indexmap = "2"
once_cell = "1"
sysinfo = "0.37"

[dependencies.gpui]
git = "https://github.com/zed-industries/zed.git"

[dependencies.gpui-component]
git = "https://github.com/longbridge/gpui-component.git"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
lto = true
strip = true
debug = false
panic = 'abort'
codegen-units = 1
