[package]
name = "sidecar-next"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
#axum = "0.8"
base64 = "0.22"
chrono = "0.4"
digest = "0.10"
hex = "0.4"
image = "0.25"
indexmap = "2"
md-5 = "0.10"
#mime_guess = "2.0"
openssl = "0.10"
rqrr = "0.10"
sha1 = "0.10"
sha2 = "0.10"
once_cell = "1"
sysinfo = "0.37"

[dependencies.gpui]
git = "https://github.com/zed-industries/zed.git"

[dependencies.gpui-component]
git = "https://github.com/longbridge/gpui-component.git"

#[dependencies.qrcode]
#version = "0.14"
#features = ["image"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

#[dependencies.tokio]
#version = "1.0"
#features = ["full"]

#[dependencies.tokio-util]
#version = "0.7"
#features = ["io"]

[dependencies.uuid]
version = "1.0"
features = ["v4"]

[profile.release]
lto = true
strip = true
debug = false
panic = 'abort'
codegen-units = 1
