[package]
name = "sidecar-next"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { version = "0.2.2" }
gpui-component = { version = "0.5.0", features = ["tree-sitter-languages"] }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

anyhow = "1"
once_cell = "1"

chrono = "0.4"
indexmap = "2"
openssl = "0.10"
regex = "1"

base64 = "0.22"
encoding_rs = "0.8"
hex = "0.4"
url = "2"

digest = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

image = "0.25"
rqrr = "0.10"

sysinfo = "0.37"
sys-locale = "0.3"

trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }

[profile.release]
lto = true
strip = true
debug = false
panic = 'abort'
codegen-units = 1
